[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
repository = "https://github.com/ice-lab/icepkg"

[workspace.dependencies]
anyhow = { version = "1.0.80", features = ["backtrace"] }
serde_json = { version = "1.0.114" }
dashmap = { version = "5.5.3" }
tokio = { version = "1.35.1", features = ["full"] }
glob = "0.3.1"
futures = "0.3.30"
testing_macros = "0.2.11"
async-trait = { version = "0" }
regex = { version = "1" }

# Must be pinned with the same swc versions
swc_config = { version = "=0.1.12" }
swc_core = { version = "=0.90.14", default-features = false }
swc_ecma_minifier = { version = "=0.191.7", default-features = false }
swc_emotion = { version = "=0.72.2" }
swc_error_reporters = { version = "=0.17.19" }
swc_html = { version = "=0.136.7" }
swc_html_minifier = { version = "=0.133.7" }
swc_node_comments = { version = "=0.20.19" }
swc_common = { version = "1.3.107" }
# napi
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
# inner dependencies
pkg_core = { path = "./crates/pkg_core" }
pkg_loader = { path = "./crates/pkg_loader" }
pkg_loader_alias = { path = "./crates/pkg_loader_alias" }
pkg_loader_swc = { path = "./crates/pkg_loader_swc" }
ice_pkg_binding = { path = "./crates/node_binding" }
