[package]
name = "pkg_core"
version = "0.1.0"
edition = "2021"
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
normalize-path = { workspace = true }
pkg_loader = { workspace = true }
pkg_loader_alias = { workspace = true }
swc_core = { workspace = true, features = [
  "base",
  "common",
  "ecma_ast",
  "ecma_parser",
  "ecma_codegen",
  "__ecma_transforms",
  "__visit",
] }
swc_ecma_transforms = { version = "*" }
serde_json = { workspace = true }
swc_compiler = { workspace = true }

[dev-dependencies]
glob = { workspace = true }
