[package]
name = "pkg_loader"
version = "0.1.0"
edition = "2021"
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
swc_compiler = { workspace = true }
serde_json = { workspace = true }
